# ELK

./: .dockerignore  .env  .gitignore  API_DOCUMENTATION.md  Dockerfile.app  Makefile  README.md  docker-compose.yml  logging_strategy_report.md  pyproject.toml
config/elasticsearch/: component-templates.json  ilm-policies.json  index-templates.json
config/kibana/: data-views.json
docker/: docker-compose.yml  filebeat.docker.yml
elasticsearch/config/: elasticsearch.yml
elasticsearch/templates/: logs-auth-session-template.json  logs-auth-template.json  logs-backend-template.json  logs-default-template.json  logs-frontend-template.json  otel-logs-template.json
filebeat/: Dockerfile  filebeat.yml
filebeat/config/: filebeat.docker.yml
kibana/config/: kibana.yml
logs/: kafka-msg.json
logstash/config/: logstash.yml
logstash/pipeline/: fastapi_otel.conf  fastapi_otel.conf.disabled  logstash-http.conf  logstash-simple.conf  logstash.conf  logstash_kafka.conf.disabled  otel-kafka.conf  otel-metrics-trace.conf  otel-metrics.conf  otel-traces.conf
otel-collector/: config.yml
scripts/: create-kibana-data-views-enhanced.sh  create-kibana-data-views.sh  init-es.sh  init-kibana.sh  kafka-consumer.sh  test-elk-stack.sh  test-logstash-http.sh
scripts/backend/: README.md  fastapi_logging.py  generate_log.py  main.py
src/: fastapi_otel_logging.py  log_attributes_validator.py
test_scripts/: test-all-attribute-combinations-parallel.sh  test-all-attribute-combinations.sh  test-elk-stack.sh  test-individual-combinations.sh  test-simple.sh
(+4 files in other folders)
