[project]
name = "elk-demo"
version = "0.1.0"
description = "Samples for sending Python, FastAPI, and Docker logs into ELK"
requires-python = ">=3.11"
dependencies = [
	"ecs-logging>=2.2.0",
	"elasticsearch>=8.0,<9.0",
	"faker>=38.2.0",
	"fastapi>=0.110.0",
	"tqdm>=4.67.1",
	"uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0"]

[tool.uv]
managed = true
